Metrics - Report MemoryAndroid.LowRamDevice on Previous Sessions Too

Bug: 757600
Change-Id: I116a87d80e426dbc91dc0840825d0adcf627c924
Reviewed-on: https://chromium-review.googlesource.com/634408
Reviewed-by: Maria Khomenko <mariakhomenko@chromium.org>
Commit-Queue: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497833}
Former-commit-id: 0ad80996ae08477966bc8b6fe061ba3769d8e3c1